--- a/env.php.example
+++ b/env.php.example
@@ -5,3 +5,8 @@ $db_user = "root";
 $db_password = "";
 
 //email config
+$mail_host = 'smtp.test.mail';
+$mail_user = 'example@test.mail';
+$mail_password = '';
+$mail_port = 587;
+$mail_form = 'example@test.mail';
