Finished auth system

--- a/env.php.example
+++ b/env.php.example
@@ -1,3 +1,6 @@
+//app
+$APP_DEBUG = false;
+
 // db config
 $db_name = "kantine";
 $db_host = "localhost";
@@ -9,4 +12,4 @@ $mail_host = 'smtp.test.mail';
 $mail_user = 'example@test.mail';
 $mail_password = '';
 $mail_port = 587;
-$mail_form = 'example@test.mail';
+$mail_from = 'example@test.mail';
