--- a/env.php.example
+++ b/env.php.example
@@ -1,3 +1,4 @@
+<?php
 //app
 $APP_DEBUG = false;
 
@@ -13,3 +14,6 @@ $mail_user = 'example@test.mail';
 $mail_password = '';
 $mail_port = 587;
 $mail_from = 'example@test.mail';
+
+// if this is set a copy of all orders will be sent here
+$mail_all_to = "example2@test.mail";
